syntax = "proto3";
package web;

option go_package = "web/v1;web";

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

// 联系人申请服务
service ContactApply {
  // 添加联系人申请接口
  rpc Create(ContactApplyCreateRequest) returns (ContactApplyCreateResponse) {
    option (google.api.http) = {
      post: "/api/v1/contact-apply/create"
      body: "*"
    };
  }

  // 同意联系人申请接口
  rpc Accept(ContactApplyAcceptRequest) returns (ContactApplyAcceptResponse) {
    option (google.api.http) = {
      post: "/api/v1/contact-apply/accept"
      body: "*"
    };
  }

  // 拒绝联系人申请接口
  rpc Decline(ContactApplyDeclineRequest) returns (ContactApplyDeclineResponse) {
    option (google.api.http) = {
      post: "/api/v1/contact-apply/decline"
      body: "*"
    };
  }

  // 联系人申请列表接口
  rpc List(ContactApplyListRequest) returns (ContactApplyListResponse) {
    option (google.api.http) = {
      post: "/api/v1/contact-apply/list"
      body: "*"
    };
  }

  // 获取申请未读数
  rpc UnreadNum(ContactApplyUnreadNumRequest) returns (ContactApplyUnreadNumResponse) {
    option (google.api.http) = {
      post: "/api/v1/contact-apply/unread-num"
      body: "*"
    };
  }
}

// 添加联系人申请接口请求参数
message ContactApplyCreateRequest{
  int32 user_id = 1[(buf.validate.field).int32.gte = 1];
  string remark = 2 [(buf.validate.field).string.min_len = 1];
}

// 添加联系人申请接口响应参数
message ContactApplyCreateResponse{}

// 同意联系人申请接口请求参数
message ContactApplyAcceptRequest{
  int32 apply_id = 1 [(buf.validate.field).int32.gte = 1];
  string remark = 2 [(buf.validate.field).string.min_len = 1];
}

// 同意联系人申请接口响应参数
message ContactApplyAcceptResponse{}

// 拒绝联系人申请接口请求参数
message ContactApplyDeclineRequest{
  int32 apply_id = 1 [(buf.validate.field).int32.gte = 1];
  string remark = 2 [(buf.validate.field).string.min_len = 1];
}

// 拒绝联系人申请接口响应参数
message ContactApplyDeclineResponse{}

// 联系人申请列表接口请求参数
message ContactApplyListRequest{}

// 联系人申请列表接口响应参数
message ContactApplyListResponse{
  message Item{
    int32 id = 1 [(google.api.field_behavior) = REQUIRED];
    int32 user_id = 2 [(google.api.field_behavior) = REQUIRED];
    int32 friend_id = 3 [(google.api.field_behavior) = REQUIRED];
    string remark = 4 [(google.api.field_behavior) = REQUIRED];
    string nickname = 5 [(google.api.field_behavior) = REQUIRED];
    string avatar = 6 [(google.api.field_behavior) = REQUIRED];
    string created_at = 7 [(google.api.field_behavior) = REQUIRED];
  }

  repeated Item items = 1 [(google.api.field_behavior) = REQUIRED];
}



message ContactApplyUnreadNumRequest{}

message ContactApplyUnreadNumResponse{
  int32 num = 1 [(google.api.field_behavior) = REQUIRED];
}